--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ function topFunction() {
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="C:\Users\jay\Desktop\jay\me.jpeg"/>
+				<img class="profile-image" src="images\me.jpeg"/>
 				<div class="profile-basic">
 					<h1 class="name">Jay Suthar</h1>
 					<h4 class="designation">Frontend Developer </h4>
