--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Resume</title>
-	<link rel="stylesheet" type="text/css" href="resume.css">
+	<link rel="stylesheet" type="text/css" href="css/resume.css">
 	<style>
 body {
   font-family: Arial, Helvetica, sans-serif;
